--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,12 @@ name = "pypi"
 
 [packages]
 gunicorn = "==20.1.0"
+asgiref = "==3.5.2"
+django = "==4.1"
+django-datatable = "==0.3.1"
+numpy = "==1.23.2"
+sqlparse = "==0.4.2"
+tzdata = "==2022.2"
 
 [dev-packages]
 
